nombre de empresa en usuarios

--- a/src/app/pages/extrapages/profile/profile/profile.component.html
+++ b/src/app/pages/extrapages/profile/profile/profile.component.html
@@ -93,6 +93,10 @@
                                                             <th class="ps-0" scope="row">Correo Electrónico :</th>
                                                             <td class="text-muted">{{userData.email}}</td>
                                                         </tr>
+                                                        <tr>
+                                                            <th class="ps-0" scope="row">Empresa :</th>
+                                                            <td class="text-muted">{{userData.empresa}}</td>
+                                                        </tr>
                                                         <!--<tr>
                                                             <th class="ps-0" scope="row">Dirección :</th>
                                                             <td class="text-muted">{{userData.city}},
