--- a/src/app/pages/norms/norms.component.html
+++ b/src/app/pages/norms/norms.component.html
@@ -211,7 +211,7 @@
                                                                 <div class="col-lg-4 col"><!-- (click)="goEvaluation(ev.id)"-->
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
-                                                                            <h5 class="mb-1" ><b>{{ar.usuario.nombre +' '+ar.usuario.apellido}}</b></h5>
+                                                                            <h5 class="mb-1" ><b>{{ar.empresa ? ar.empresa : ar.usuario.nombre +' '+ar.usuario.apellido}}</b></h5>
                                                                             <p class="text-muted mb-0">Creado por</p>
                                                                         </div>
                                                                     </div>
