quitar secciones al crear proyecto

--- a/src/app/pages/projects/create/create.component.html
+++ b/src/app/pages/projects/create/create.component.html
@@ -148,7 +148,7 @@
     <div class="col-sm-12 justify-content-center" style="display: block;padding: 0px;">
         <div class="row justify-content-center">
             <div class="col-12"><!--style="text-align: center;"-->
-                <button class="btn btn-primary btn-label waves-effect right waves-light" style="float:right;" (click)="siguiente()"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
+                <button class="btn btn-primary btn-label waves-effect right waves-light" style="float:right;" (click)="saveProject(1)"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Guardar</button><!--(click)="siguiente()"-->
             </div>
         </div>
     </div>
