--- a/src/app/pages/extrapages/team/team.component.html
+++ b/src/app/pages/extrapages/team/team.component.html
@@ -392,10 +392,32 @@
 
                                 <div class="mb-3" *ngIf="rol == 2">
                                     <label for="teammembersEmpresa" class="form-label">Empresa</label>
-                                    <input type="text" class="form-control" id="teammembersEmpresa"
+                                    
+                                    <!--<input type="text" class="form-control" id="teammembersEmpresa"
                                         placeholder="Ingresar Empresa" formControlName="empresa"
                                         [ngClass]="{ 'is-invalid': submitted && form['empresa'].errors }">
-                                    <div class="invalid-feedback">Ingrese Empresa.</div>
+                                    <div class="invalid-feedback">Ingrese Empresa.</div>-->
+                                    
+                                    <ng-autocomplete
+                                    [data]="Empresas"
+                                    [searchKeyword]="keyword"
+                                    placeholder="Selecciona Empresa"
+                                    (selected)='selectEvent($event)'
+                                    (inputChanged)='onChangeSearch($event)'
+                                    (inputFocused)='onFocused($event)'
+                                    historyIdentifier="Empresa"
+                                    [itemTemplate]="itemTemplate"
+                                    [notFoundTemplate]="notFoundTemplate"
+                                    formControlName="empresa">
+                                    </ng-autocomplete>
+
+                                    <ng-template #itemTemplate let-item>
+                                        <a [innerHTML]="item.name"></a>
+                                    </ng-template>
+
+                                    <ng-template #notFoundTemplate let-notFound>
+                                        <div [innerHTML]="notFound"></div>
+                                    </ng-template>
                                 </div>
                                 
                                 <div class="mb-3" *ngIf="rol == 3">
