--- a/src/app/pages/projects/list/list.component.html
+++ b/src/app/pages/projects/list/list.component.html
@@ -75,7 +75,7 @@
             
             <div class="col team-settings">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-10">
                         <div class="flex-shrink-0 me-2">
                             <h5 class="mb-1 fs-15" [ngClass]=" { 'text-info-card-header': data.tipo === 'requisito' || !data.tipo, 'text-success-card-header': data.tipo === 'ambiental','text-warning-card-header': data.tipo === 'sectorial','text-brown-card-header': data.tipo === 'social','text-violet-card-header': data.tipo === 'otros'}">{{data.nombre}}</h5>    
                         </div>
@@ -91,7 +91,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="dropdown-item">
+                                <a href="javascript:void(0);" class="dropdown-item"  data-bs-toggle="modal" data-bs-target="#removeProjectModal" (click)="confirm(deleteModel,data.id)">
                                     <i class="ri-delete-bin-5-line me-2 align-middle float-start"></i>Borrar
                                 </a>
                             </li>
