--- a/src/app/pages/projects/list/list.component.html
+++ b/src/app/pages/projects/list/list.component.html
@@ -80,7 +80,7 @@
                             <h5 class="mb-1 fs-15" [ngClass]=" { 'text-info-card-header': data.tipo === 'requisito' || !data.tipo, 'text-success-card-header': data.tipo === 'ambiental','text-warning-card-header': data.tipo === 'sectorial','text-brown-card-header': data.tipo === 'social','text-violet-card-header': data.tipo === 'otros'}">{{data.nombre}}</h5>    
                         </div>
                     </div>
-                    <div class="col text-end" ngbDropdown>
+                    <div class="col text-end" ngbDropdown *ngIf="validateRol(1) || validateRol(2)">
                         <a href="javascript:void(0);" ngbDropdownToggle id="dropdownMenuProject" data-bs-toggle="dropdown" aria-expanded="false" class="arrow-none">
                             <i class="ri-more-fill fs-17"></i>
                         </a>
