--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -900,7 +900,8 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-sm-auto col pointer" (click)="onCheckboxClickVincular(s.articuloId, s)">
+                                                        <div class="col pointer" (click)="onCheckboxClickVincular(s.articuloId, s)"><!--col-sm-auto -->
+
                                                             <!--<div class="form-check form-check-inline form-radio-primary mb-3">
                                                                 <input class="form-check-input" type="checkbox" id="{{s.articuloId}}" value="{{s.articuloId}}" name="checkAllVincular" (change)="onCheckboxChangeVincular($event, s)">
                                                             </div>
@@ -909,7 +910,7 @@
                                                                 <h5 class="fs-16 mb-1" style="color: #405189;">{{s.articulo ? s.tipoParte +' '+ s.articulo : s.tipoParte}}</h5>
                                                             </div>
                                                         </div>
-                                                        <div class="col pointer" [ngClass]="validateConfig('atributo') || validateConfig('componente') || validateConfig('fase') ? 'col-lg-5' : 'col-lg-8'" (click)="onCheckboxClickVincular(s.articuloId, s)">
+                                                        <div class="col pointer" [ngClass]="validateConfig('atributo') || validateConfig('componente') || validateConfig('fase') ? 'col-xs-3 col-lg-3' : 'col-xs-4 col-lg-4'" (click)="onCheckboxClickVincular(s.articuloId, s)">
                                                             <!--class="team-profile-img"-->
                                                                 <p class="card-text mb-2 align-self-center"><!-- [style]="s.descripcion && s.descripcion.length > 450 ? 'min-height: 60px;' : 'min-height: 80px;'"-->
                                                                     {{s.descripcion ? (s.descripcion.length > 450 ? formatArticle(s.descripcion, s.articuloId) : s.descripcion) : s.tipoParte}} 
@@ -919,8 +920,7 @@
                                                                 </p>-->
                                                         </div>
                                                         
-                                                        
-                                                        <div class="col-xs-1 col" *ngIf="validateConfig('atributo')">
+                                                        <div class="col-xs-1  col-lg-2 col" *ngIf="validateConfig('atributo')">
                                                             <!--<i [ngClass]="{'icon-check': s.monitoreo}" style="font-size: 30px;" class="ri-zoom-in-line"></i>-->
                                                             <button
                                                                     [ngClass]="validateAttribute('articuloTipo',s.id, s.articuloTipo, 'permiso') ? 'btn-success' :'btn-light'"
@@ -946,7 +946,7 @@
                                                                 </select>
                                                         </div>-->
                                                         
-                                                        <div class="col-xs-1 col" *ngIf="validateConfig('fase')">
+                                                        <div class="col-xs-1  col-lg-2 col" *ngIf="validateConfig('fase')">
                                                             <!--<i [ngClass]="{'icon-check': s.permiso}" style="font-size: 30px;" class="ri-file-list-3-line"></i>-->
                                                             
                                                             <button
@@ -974,7 +974,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>-->
-                                                        <div class="col-lg-2 col">
+                                                        <div class="col-xs-1  col-lg-2 col">
                                                                 <button
                                                                     [ngClass]="byArticuloVinculacion(s.articuloId) > 0 && !onCheckVincular(s.articuloId) ? 'btn btn-light view-btn text-success' : 'btn btn-light view-btn'" style="width: 100%;" data-bs-target="#showModal" (click)="openModal3(content3, 'single', s)">{{byArticuloVinculacion(s.articuloId) > 0 && !onCheckVincular(s.articuloId) ? 'Modificar elementos' : 'Conectar elementos'}}</button>
                                                         </div>
