--- a/src/app/pages/norms/norms.component.html
+++ b/src/app/pages/norms/norms.component.html
@@ -44,9 +44,9 @@
                         <div class="col-lg-12">
                             <div class="mb-3">
                                 <label class="form-label" for="gen-info-norma-input">Id Norma</label>
-                                <input type="text" class="form-control" id="gen-info-norma-input" formControlName="normaId"  #myNormaId (blur)="validNormaId(myNormaId.value)" placeholder="Identificador de Norma ..." required [ngClass]="{ 'is-invalid': f['normaId'].errors }" [readOnly]="norma_id">
-                                <!-- submitted && -->
-                                <div *ngIf="f['normaId'].errors" class="invalid-feedback" align="left">
+                                <input type="text" class="form-control" id="gen-info-norma-input" formControlName="normaId" #myNormaId (blur)="validNormaId(myNormaId.value)" placeholder="Identificador de Norma ..." required [ngClass]="{ 'is-invalid': submitted && f['normaId'].errors }" [readOnly]="norma_id">
+                                
+                                <div *ngIf="submitted && f['normaId'].errors" class="invalid-feedback" align="left">
                                     <div *ngIf="f['normaId'].errors['pattern']">El id de la norma debe ser numerico</div>
                                     <div *ngIf="f['normaId'].errors['required']">El id de la norma es requerido</div>
                                 </div>
@@ -56,9 +56,9 @@
                           <div class="col-lg-12">
                               <div class="mb-3">
                                   <label class="form-label" for="gen-info-titulo-input">Título</label>
-                                  <input type="text" class="form-control" id="gen-info-titulo-input" formControlName="titulo" placeholder="Decreto ..." required [ngClass]="{ 'is-invalid': f['titulo'].errors }">
+                                  <input type="text" class="form-control" id="gen-info-titulo-input" formControlName="titulo" placeholder="Decreto ..." required [ngClass]="{ 'is-invalid': submitted && f['titulo'].errors }">
                                   
-                                <div *ngIf="f['titulo'].errors" class="invalid-feedback" align="left">
+                                <div *ngIf="submitted && f['titulo'].errors" class="invalid-feedback" align="left">
                                     <div *ngIf="f['titulo'].errors['required']">El titulo es requerido</div>
                                 </div>
                               </div>
@@ -139,11 +139,11 @@
                     <!--</form>-->
                     <!-- wizard-tab -->
                     <div class="d-flex align-items-start gap-3 mt-4">
-                      <button type="button" class="btn btn-success btn-label right ms-auto nexttab nexttab" (click)="saveCuerpoLegal()" data-nexttab="pills-info-desc-tab" awNextStep [disabled]="!cuerpoForm.valid"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i>Configurar</button>
+                      <button type="button" class="btn btn-success btn-label right ms-auto nexttab nexttab" (click)="saveCuerpoLegal()" data-nexttab="pills-info-desc-tab" awNextStep><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i>Configurar</button><!--[disabled]="!cuerpoForm.valid"-->
                     </div>
                 </aw-wizard-step>
   
-                <aw-wizard-step>
+                <aw-wizard-step [canEnter]="cuerpoForm.valid">
                     <ng-template awWizardStepSymbol>
                       <li class="nav-item" role="presentation">
                         <button class="nav-link rounded-pill" data-progressbar="custom-progress-bar" id="pills-info-desc-tab" data-bs-toggle="pill" data-bs-target="#pills-info-desc" type="button" role="tab" aria-controls="pills-info-desc" aria-selected="false">2</button>
