--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -910,7 +910,7 @@
                                                                 <h5 class="fs-16 mb-1" style="color: #405189;">{{s.articulo ? s.tipoParte +' '+ s.articulo : s.tipoParte}}</h5>
                                                             </div>
                                                         </div>
-                                                        <div class="col pointer" [ngClass]="validateConfig('atributo') || validateConfig('componente') || validateConfig('fase') ? 'col-xs-3 col-lg-3' : 'col-xs-4 col-lg-4'" (click)="onCheckboxClickVincular(s.articuloId, s)">
+                                                        <div class="col pointer" [ngClass]="validateConfig('atributo') || validateConfig('componente') || validateConfig('fase') ? (validateConfig('atributo') && validateConfig('fase') ? 'col-xs-3 col-lg-3' : 'col-xs-5 col-lg-5') : 'col-xs-7 col-lg-7'" (click)="onCheckboxClickVincular(s.articuloId, s)">
                                                             <!--class="team-profile-img"-->
                                                                 <p class="card-text mb-2 align-self-center" style="text-align: justify;"><!-- [style]="s.descripcion && s.descripcion.length > 450 ? 'min-height: 60px;' : 'min-height: 80px;'"-->
                                                                     {{s.descripcion ? (s.descripcion.length > 450 ? formatArticle(s.descripcion, s.articuloId) : s.descripcion) : s.tipoParte}} 
