--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -907,7 +907,7 @@
                                                             </div>
                                                             -->
                                                             <div>
-                                                                <h5 class="fs-16 mb-1" style="color: #405189;">{{s.articulo ? s.tipoParte +' '+ s.articulo : s.tipoParte}}</h5>
+                                                                <h5 class="fs-16 mb-1" style="color: #405189;">{{s.articulo ? (s.articulo.length > 5 ?s.articulo : (s.tipoParte +' '+ s.articulo)) : s.tipoParte}}</h5>
                                                             </div>
                                                         </div>
                                                         <div class="col pointer" [ngClass]="validateConfig('atributo') || validateConfig('componente') || validateConfig('fase') ? (validateConfig('atributo') && validateConfig('fase') ? 'col-xs-3 col-lg-3' : 'col-xs-5 col-lg-5') : 'col-xs-7 col-lg-7'" (click)="onCheckboxClickVincular(s.articuloId, s)">
